--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>Chaos Lords Support Page</h1>
 <p><strong>Q1: How do I unlock buildings at the base?</strong></p>
 <p>You need to level up your account, all the buildings unlock at level 10.</p>
-<p><strong>Q2: How can I imrpove my gear?</strong></p>
+<p><strong>Q2: How can I improve my gear?</strong></p>
 <p>You can enhance it at the Forge.</p>
 <p><strong>Q3: Where can I get hourglasses for raiding missions?</strong></p>
 <p>You can buy them at the market or find in a Time Chest (also sold at the market).</p>
